--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/839e3f5dde.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Get.coffee</title>
 </head>
@@ -61,12 +63,15 @@
 
                 <ul class="page_home_list_social">
                     <li>
+                        <i class="fab fa-facebook-square"></i>
                         <a href="#">facebook</a>
                     </li>
                     <li>
+                        <i class="fab fa-instagram-square"></i>
                         <a href="#">instagram</a>
                     </li>
                     <li id="li">
+                        <i class="fab fa-twitter-square"></i>
                         <a href="#">twitter</a>
                     </li>
                 </ul>
